# multi-pass-transformer-training

./: .gitignore  README.md  bbh_training.py  branch_readme.md  model_factory.py  models.py  pyproject.toml  train_bbh_curriculum.py  train_bbh_symbolic.py  train_bbh_trace.py  train_permutation.py  train_repl.py  train_utils.py
experiments/: __init__.py  common.py  eval_diagnostics.py  eval_othello.py  eval_trace_drift.py  presets.py  summarize_ablation.py  train_bbh.py  train_trace.py
figures/: plot_drift.ipynb  plot_trace.ipynb
runs/ablations/: 01_variable_depth.sh  06_position_offsets.sh  07_memory_width.sh  08_null_memory_slot.sh  13_memory_read_layers.sh  generation_aligned_training.sh  stale_memory_training.sh
runs/bbh/: 00_bbh_smoke.sh  10_bbh_curriculum.sh
runs/drift/: 00_drift_smoke.sh  10_drift.sh
runs/local/: 10_main_matrix_pilot.sh  20_trace_task_calibration.sh  30_trace_difficulty_sweep.sh
runs/trace/: 00_smoke_trace.sh  10_othello_trace.sh  10_random_graph_walk_trace.sh  10_shortest_path_trace.sh  20_othello_eval.sh  (+1 more)
runs_bbh/: 00_smoke.sh  10_walk_final_small.sh  20_walk_trace_small.sh  30_battery_final_tiny.sh
scripts/: pilot_01_variable_depth.sh  pilot_06_position_offsets.sh  pilot_07_memory_width.sh  pilot_08_null_memory_slot.sh  pilot_13_memory_read_layers.sh  pilot_generation_aligned_training.sh  pilot_stale_memory_training.sh  summarize_learning_runs.py  test_01_variable_depth.sh  test_06_position_offsets.sh  test_07_memory_width.sh  test_08_null_memory_slot.sh  test_13_memory_read_layers.sh  test_generation_aligned_training.sh  test_shortest_path.sh  test_stale_memory_training.sh  train_smoke.sh
tasks/: arithmetic.py  bbh_symbolic_common.py  bbh_symbolic_registry.py  boolean_rpn.py  common.py  dyck.py  order_deduction.py  permutation.py  repl.py  tracking.py  truth_graph.py  walk.py
tests/: conftest.py  test_bbh_symbolic_training.py  test_cli.py  test_cli_integration.py  test_clrs_text.py  test_experiments.py  test_generation_eval.py  test_models.py  test_plotting_assets.py  test_script_contracts.py  test_symbolic_batch_contract.py  test_symbolic_task_contracts.py  test_symbolic_tasks.py  test_symbolic_training.py  test_task_examples.py  test_tasks.py  test_trace_drift_experiment.py  test_train_permutation.py  test_training_common.py  test_transformer_generation.py
(+32 files in other folders)
