[project]
name = "multipass-transformer-training"
version = "0.1.0"
description = "Research code for multi-pass transformer training on synthetic state-tracking tasks."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]
plot = [
    "matplotlib>=3.7",
]

[tool.setuptools]
py-modules = [
    "model_factory",
    "models",
    "bbh_training",
    "train_bbh_curriculum",
    "train_bbh_trace",
]

[tool.setuptools.packages.find]
include = ["tasks*"]
exclude = [
    "figures*",
    "papers*",
    "runs*",
    "tests*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]
